added all 6 features
